# OpenFaceWrapper

./: OpenFaceDLL.cpp  OpenFaceDLL.sln  OpenFaceDLL.vcxproj  OpenFaceWrapper.h  README.md  load_dll.py
OpenFaceDLL/: .gitignore  CMakeLists.txt  OpenFaceDLL.cpp  OpenFaceDLL.h  OpenFaceDLL.vcxproj.filters  OpenFaceWrapper.cpp  OpenFaceWrapper.h  README.md  Utils.cpp  conan_script.txt  conanfile.txt
compiled_libraries/: OpenFaceDLL.lib
test/: load_dll.py
